deploy/yamls-parameterized/kustomize/base/git-prompt-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: git-prompt
    name: git-prompt
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: git-prompt
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: git-prompt
            name: git-prompt
        spec:
            containers:
                - image: quay.io/p/git-prompt:latest
                  imagePullPolicy: Always
                  name: git-prompt
                  ports:
                    - containerPort: 8080
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
