deploy/yamls-parameterized/kustomize/base/git-prompt-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: git-prompt
    name: git-prompt
spec:
    ports:
        - name: port-8080
          port: 8080
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: git-prompt
    type: ClusterIP
status:
    loadBalancer: {}

...
