deploy/yamls-parameterized/kustomize/base/p-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: p
    name: p
spec:
    rules:
        - host: p.com
          http:
            paths:
                - backend:
                    service:
                        name: git-prompt
                        port:
                            name: port-8080
                  path: /git-prompt
                  pathType: Prefix
status:
    loadBalancer: {}

...
